packages/kit/test/apps/basics/src/routes/errors/load-status-without-error-client/+page.js
import { error } from '@sveltejs/kit/data';

export async function load() {
	if (typeof window !== 'undefined') {
		throw error(401, undefined);
	}
	return {};
}
